[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/CapitalShips/CapitalShip.gd" type="Script" id=1]
[ext_resource path="res://assets/cruises/capital_ship.dae" type="PackedScene" id=2]
[ext_resource path="res://src/Ships/Explosion/Material.tres" type="Material" id=3]
[ext_resource path="res://src/CapitalShips/Hangar/Hangar.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/HealthSystem/HealthSystem.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/new_alarm.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/interface/themes/default_theme.tres" type="Theme" id=7]

[node name="CapitalShip" type="Spatial" groups=[
"CapitalShips",
"Cruises",
]]
script = ExtResource( 1 )

[node name="Scene Root" parent="." instance=ExtResource( 2 )]
editor/display_folded = true
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0 )

[node name="character" parent="Scene Root" index="0"]
transform = Transform( 0.015, 0, 0, 0, 0.03, 0, 0, 0, 0.015, -0.506675, -1.18929, -4.19718 )
mesh = null

[node name="up" parent="Scene Root" index="1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, -1.74846e-07, 0, 1.74846e-07, 1, 0, 0, 0 )
material/0 = ExtResource( 3 )

[node name="col" parent="Scene Root/up" index="0" groups=[
"CapitalShipsColliders",
]]
editor/display_folded = true

[node name="engines" parent="Scene Root" index="2"]
editor/display_folded = true
material/0 = ExtResource( 3 )

[node name="col" parent="Scene Root/engines" index="0" groups=[
"CapitalShipsColliders",
]]
editor/display_folded = true

[node name="bottom" parent="Scene Root" index="3"]
editor/display_folded = true
material/0 = ExtResource( 3 )

[node name="col" parent="Scene Root/bottom" index="0" groups=[
"CapitalShipsColliders",
]]
editor/display_folded = true

[node name="Hangar" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -41, -278 )

[node name="Lights" type="Spatial" parent="."]
editor/display_folded = true

[node name="SpotLight" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -25.8039, -209.625 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="SpotLight2" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -170, -25.804, -209.625 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="SpotLight3" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 170, -25.804, -209.625 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="SpotLight4" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -25.8039, -322.755 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="SpotLight5" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 170, -25.804, -322.754 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="SpotLight6" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -170, -25.804, -322.754 )
light_energy = 3.5
spot_range = 97.2
spot_angle = 51.4

[node name="HealthSystem" parent="." instance=ExtResource( 5 )]
MAX_HEALTH = 4000

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 34.73
one_shot = true

[node name="Alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -216.0
margin_top = -79.0
margin_right = -100.0
margin_bottom = -50.0
theme = ExtResource( 7 )
text = "600000 HP"
[connection signal="die" from="HealthSystem" to="." method="_on_HealthSystem_die"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]

[editable path="Scene Root"]
